[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.22.0", features = ["server"] }
hyper = "1.1.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower = { version = "0.4.13", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.79"
futures = "0.3.30"
tower-http = { version = "0.5.1", features = ["full"] }
serde_json = "1.0.113"

jsonrpc-v2 = "0.13.0"
serde = "1.0.196"
actix-web = "4.5.1"
actix-rt = "2.9.0"
